--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
-    "name": "vendor/package",
-    "description": "Brief description of this PHP library",
+    "name": "cultuurnet/silex-amqp",
+    "description": "AMQP integration for Silex projects",
     "type": "library",
     "license": "Apache-2.0",
     "authors": [],
-    "require": {},
+    "require": {
+        "silex/silex": "~1.3",
+    },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
         "squizlabs/php_codesniffer": "~2.3",
