--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Apache-2.0",
     "authors": [],
     "require": {
-        "silex/silex": "~1.3",
+        "silex/silex": "~1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
