--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "Apache-2.0",
     "authors": [],
     "require": {
-        "silex/silex": "~1.3"
+        "silex/silex": "~1.3",
+        "knplabs/console-service-provider": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
