--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [],
     "require": {
         "silex/silex": "~1.3",
-        "cultuurnet/broadway-amqp": "dev-feature/III-2553 as 0.1",
+        "cultuurnet/broadway-amqp": "~0.1",
         "knplabs/console-service-provider": "~1.0"
     },
     "require-dev": {
